--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -23,7 +23,6 @@ body
 	font-family "Lato-Regular"
 	
 // Header
-
 .mainHeader
 	width 100%
 	height 44px
@@ -116,7 +115,6 @@ article .title, .title
 	transition background-color .5s
 	-webkit-appearance none
 	-moz-appearance none
-
 	
 .btn:focus
 	outline none
@@ -181,7 +179,7 @@ article a
 	margin-left 0
 	
 .newsletter_box
-	width 50%
+	width 50% !important
 	height 200px
 	border-radius 3px
 	padding-top 10px
