--- a/src/stylus/responsive/smartphones.styl
+++ b/src/stylus/responsive/smartphones.styl
@@ -1,4 +1,4 @@
-@media screen and (max-width: 480px)
+@media (max-width: 480px)
 	
 	body
 		background-size 586px 334px
@@ -75,8 +75,6 @@
 	.facaparte article .controls
 		margin-top 10px
 		
-			
-
 	/*.facaparte article .btn
 		width 175px
 		float left
@@ -86,8 +84,8 @@
 		//margin-left 0 !important
 
 	// Lightbox
-	.formLightBox
-		width 98%
+	/*.formLightBox
+		width 98%*/
 	
 	.formLightBox .btn
 		width 140px
@@ -102,15 +100,14 @@
 	.mainFooter .logotipoBottom img
 		width 28px
 		
-	.newsletter_box
+	/*.newsletter_box
 		width 90%
 		height 275px
 		
 	.newsletter_box .footer
 		width 90%
-		height 70px
-
-		
+		height 70px*/
+	
 @media screen and (max-width: 320px)
 
 	.controls .btn
